import "CounteragentGroups/DepartmentsInGroup.proto";

package Diadoc.Api.Proto.CounteragentGroups;

option java_outer_classname = "CounteragentGroupToCreateProtos";

message CounteragentGroupToCreate
{
  required string Name = 1;
  optional DepartmentsInGroup Departments = 2;
}