package Diadoc.Api.Proto.CounteragentGroups;

message DepartmentsInGroup
{
  repeated string DepartmentId = 1;
}